# ROVIProjekt

./: README.md  assimp_log.txt  rwsettings.xml
Integration/: readme.txt
Integration/Project_WorkCell/: Scene.wc.xml  assimp_log.txt
Integration/Project_WorkCell/SamplePluginPA10/libs/Release/: rwsettings.xml
Integration/Project_WorkCell/SamplePluginPA10/src/: SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui  interpolator.hpp
Integration/Project_WorkCell/UR5/UR-6-85-5-A/: Device.wc.xml
Integration/Project_WorkCell/parts/: mduck.stl  mduck_voxel.pcd  sduck_voxel.pcd
M3-Workcell_and_plugin/Project_WorkCell_Cam/: guide.txt  performEval_duck_pos.txt  performEval_duck_rot.txt
M3-Workcell_and_plugin/Project_WorkCell_Cam/Project_WorkCell/: Scene.wc.xml  visu.rwplay
M3-Workcell_and_plugin/Project_WorkCell_Cam/Project_WorkCell/SamplePluginPA10/: CMakeLists.txt
M3-Workcell_and_plugin/Project_WorkCell_Cam/Project_WorkCell/SamplePluginPA10/src/: SamplePlugin.hpp
M3-Workcell_and_plugin/Project_WorkCell_Cam/Project_WorkCell/UR5/UR-6-85-5-A/: Device.wc.xml
M3-Workcell_and_plugin/Project_WorkCell_Cam/Project_WorkCell/parts/: ball.mtl  dot_duck.mtl
M3-Workcell_and_plugin/Project_WorkCell_Cam/Project_WorkCell/table/: Sigmund_table.3ds  bin.stl  smiley.blend1  table_with_box.blend
M3-Workcell_and_plugin/Project_WorkCell_Cam/RoviSamplePlugin/src/: SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui
MATLAB/: M3_pose_estimate.txt  PoseEstimate_M3.m  ball_performance.m  ball_performance.txt  ball_performance_time.txt  ball_performance_time_without_noise.txt  ball_performance_without_noise.txt  base_side_100.txt  base_side_1000.txt  base_side_grid.txt  base_side_pick_1000.txt  combinedTransform.txt  duck_performance.txt  duck_performance_time.txt  exe_time_test.m  interpolation.m  m3_performance.m  path.m  path_plots.m  path_plots_rrt.m  path_plots_rrt.m~  pose_estimation.m  ransacOptimizedTime.txt  ransacTime.txt  reachability.m  reachability_up.m
MATLAB/rrt_connect_data/: rrtConnect_configuration_pickplace_left.txt  rrtConnect_configuration_pickplace_middle.txt  rrtConnect_configuration_pickplace_right.txt  rrtConnect_planning_times_pickplace_left.txt  rrtConnect_planning_times_pickplace_middle.txt  rrtConnect_planning_times_pickplace_right.txt  rrtConnect_transform_pickplace_left.txt  rrtConnect_transform_pickplace_middle.txt  rrtConnect_transform_pickplace_right.txt
ObjectFiles/: assimp_log.txt  cylinder_voxel.pcd  duck_voxel.pcd  gnome_voxel.pcd  rwsettings.xml  sduck.stl
Project_WorkCell_Cam/Project_WorkCell/: Scene.wc.xml  visu.rwplay
Project_WorkCell_Cam/Project_WorkCell/SamplePluginPA10/libs/Release/: assimp_log.txt  rwsettings.xml
Project_WorkCell_Cam/Project_WorkCell/SamplePluginPA10/src/: SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui
Project_WorkCell_Cam/Project_WorkCell/parts/: bottle.ac  cylinder.3ds  cylinder.mtl  gnome.3ds
Project_WorkCell_Cam/Project_WorkCell/table/: Sigmund_table.3ds
Project_WorkCell_Cam/RoviSamplePlugin/: CMakeLists.txt
Project_WorkCell_Cam/RoviSamplePlugin/src/: SamplePlugin.cpp
Project_WorkCell_Cam_RRT/Project_WorkCell/: Scene.wc.xml
Project_WorkCell_Cam_RRT/Project_WorkCell/SamplePluginPA10/src/: SamplePlugin.cpp
Project_WorkCell_Cam_RRT/Project_WorkCell/parts/: Square.3ds  gnome.3ds  smiley.mtl
Project_WorkCell_Cam_RRT/Project_WorkCell/table/: smiley.blend
Project_WorkCell_Cam_RRT/RoviSamplePlugin/src/: SamplePlugin.cpp
ROB/: readme.txt  rrt_connect_statistics.m
ROB/RRT-connect/: CMakeLists.txt
ROB/RRT-connect/src/: RRT.cpp
ROB/Reachability/: CMakeLists.txt
ROB/Reachability/src/: reachability.cpp
ROB/rrt_connect/: CMakeLists.txt
ROB/rrt_connect/src/: main.cpp  performance_evaluation.hpp  rrt_connect (mikkel's conflicted copy 2019-11-16).cpp  rrt_connect.cpp  rrt_connect_methods.hpp  util.hpp
VIS/: readme.txt
VIS/DenseStereo/: CMakeLists.txt
VIS/DenseStereo/src/: DenseStereo.cpp  alignment.hpp  cam.cpp  cam.h  global_alignment.hpp  local_alignment.hpp
VIS/M2/project/: CMakeLists.txt
VIS/M2/project/src/: alignment.hpp  global_alignment.hpp  local_alignment.hpp  main.cpp  pose_estimation.hpp  preprocess.hpp
VIS/SparseStereo/: CMakeLists.txt
VIS/SparseStereo/src/: SparseStereo.cpp  SparseStereoMethods.hpp  TestingMethods.hpp  main.cpp
VIS/buildM2/: CMakeCache.txt  M2  M2.cbp  cmake_install.cmake
interpolator/: readme.txt
interpolator/linear/: CMakeLists.txt
interpolator/linear/src/: interpolator.hpp  linear.cpp
interpolator/workcell/: Scene.wc.xml
interpolator/workcell/parts/: duck.stl  gnome.3ds
interpolator/workcell/table/: table.3ds
